removed: default footer and header, added: admin rights and error handling

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,3 +2,9 @@
 base="dark"
 primaryColor="#ffa500"
 secondaryBackgroundColor="#282a3d"
+
+[browser]
+showSidebarNavigation = false
+
+[ui]
+hideTopBar = false
